# pixiv-desktop

./: .npmrc  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
public/: oauth-callback.html
src/: main.tsx
src-tauri/: Cargo.toml  desktop-template.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ProxySettings.tsx  ScrollToTop.tsx
src/components/download/: DownloadPanel.tsx
src/components/image/: IllustCard.tsx  IllustGrid.tsx  ImagePager.tsx  ImageViewer.tsx  SimpleImage.tsx  UgoiraViewer.tsx
src/components/search/: SearchFilterDrawer.tsx  SearchInput.tsx  SearchResults.tsx
src/hooks/: useImagePreload.ts
src/pages/: Home.tsx  ImageDetail.tsx  Login.tsx  Profile.tsx  Search.tsx  Settings.tsx  UserProfile.tsx
src/router/: index.tsx
src/services/: httpClient.ts
src/services/api/: oauth.ts  pixiv.ts
src/stores/: authStore.ts  downloadStore.ts  proxyStore.ts  searchStore.ts
src/types/: index.ts
src/utils/: constants.ts  image.ts  pkce.ts  storage.ts
